# website

./: .gitignore  docker-compose.yaml
csfloat_bot/: .env  .env.example  .gitignore  Dockerfile  bot.py  debug.py  docker-compose.yml  momentum.py  pricedb.py  pyproject.toml
keycloak/: docker-compose.yaml
main_page/: Dockerfile  contact.html  docker-compose.yaml  hesap.html  ideas.html  index.html  style.css  test-blog.html  tuner.html
main_page/kahve/: icelimmi.css  icelimmi.html  script.js
main_page/oyun/: girebilirmiyim.html  index.html  script.js  style.css
main_page/slides/: template.html  test.html  test.md
mlflow/: Dockerfile  docker-compose.yaml  id_rsa  mlflow.db
mlflow/data/: postmaster.pid
nginxproxymanager/: docker-compose.yaml
nginxproxymanager/data/: keys.json
nginxproxymanager/mysql/: aria_log.00000001  aria_log_control
owncast/: docker-compose.yaml
portfolio/: Dockerfile
rtmp/: docker-compose.yaml  htpasswd  nginx.conf
server/: nginx.conf
server/html/: test.html
smart-greenhouse/: ALISVERIS-VE-ADIMLAR.md  README.md  plan.md
smart-greenhouse/backend/: .env.example  README.md  docker-compose.yml  requirements.txt
smart-greenhouse/firmware/: README.md  platformio.ini
smart-greenhouse/greenhouse-3d/: .env.example  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json
teamspeak/: docker-compose.yaml
teamspeak/data-ts6/: tsserver.sqlitedb  tsserver.sqlitedb-shm  tsserver.sqlitedb-wal
traefik/: docker-compose.yaml  traefik.yml
vpn/: docker-compose.yaml  melikpc.ovpn  scripts.txt
(+345 files in other folders)
